--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     display: block;
     width: 500px;
   }
+  .dropdown {
+    opacity: 0;
+    background-color: #fff;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+    width: 500px;
+    padding: 4px 0;
+  }
+  .list-entry {
+    color: #fff;
+    padding: 4px;
+    background-color: #366ff1;
+    font-size: 13px;
+    font-weight: bold;
+  }
+  .list-entry span {
+    font-weight: normal;
+    font-size: 11px;
+  }
   </style>
 </head>
 <body>
@@ -19,25 +37,42 @@
 
 <h1>Type 1</h1>
 <input id="ab1" type="text" placeholder="Search or enter address">
+<div id="dd1" class="dropdown">
+  <div class="list-entry">
+    Search the web<br>
+    <span>google.com</span>
+  </div>
+</div>
 
 <h1>Type 2</h1>
 <input id="ab2" type="text" placeholder="Search or enter address">
+<div id="dd2" class="dropdown">
+  <div class="list-entry">
+    Search the web<br>
+    <span>google.com</span>
+  </div>
+</div>
 
 
 <script type="text/javascript">
   var ab1 = document.getElementById('ab1');
+  var dd1 = document.getElementById('dd1');
   ab1.addEventListener('input', function() {
     var v = ab1.value;
     if (v !== '' && v === "google.com".substring(0, v.length)) {
       ab1.value = 'google.com';
       ab1.setSelectionRange(v.length ,ab1.value.length);
       ab1.focus();
+      dd1.style.opacity = 1;
+    } else {
+      dd1.style.opacity = 0;
     }
   });
 
   var longURL = "google.com/search?q=&ie=utf-8&oe=utf-8&rls=org.mozilla:en-US:official&client=firefox-a&channel=sb&gfe_rd=ctrl&ei=scILU4r9BsqV8Qe40YD4BQ&gws_rd=cr";
 
   var ab2 = document.getElementById('ab2');
+  var dd2 = document.getElementById('dd2');
   ab2.addEventListener('input', function() {
     var v = ab2.value;
     if (v !== '' && v === longURL.substring(0, v.length)) {
@@ -47,6 +82,9 @@
       window.setTimeout(function() {
         ab2.scrollLeft = 0;
       }, 0);
+      dd2.style.opacity = 1;
+    } else {
+      dd2.style.opacity = 0;
     }
   });
 
