--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 </head>
 <body>
 
-<p>Start typing »google.com« and then press enter</p>
+<p>Start typing »google.com« and then press enter<br>
+Assuming that <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=951624">bug 951624</a> is fixed</p>
 
 <h1>Type 1</h1>
 <input id="ab1" type="text" placeholder="Search or enter address">
