add description and link to bug

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 </head>
 <body>
 
+<h1>Spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=959571">bug 959571</a></h1>
 <p>Start typing »google.com« and then press enter<br>
 Assuming that <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=951624">bug 951624</a> is fixed</p>
 
-<h1>Type 1</h1>
+<h2>Type 1</h2>
 <input id="ab1" type="text" placeholder="Search or enter address">
 <div id="dd1" class="dropdown">
   <div class="list-entry">
@@ -45,7 +46,7 @@ Assuming that <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=951624">bug 
   </div>
 </div>
 
-<h1>Type 2</h1>
+<h2>Type 2</h2>
 <input id="ab2" type="text" placeholder="Search or enter address">
 <div id="dd2" class="dropdown">
   <div class="list-entry">
