add google logo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
   .list-entry span {
     font-weight: normal;
     font-size: 11px;
+    margin-left: 20px;
+    display: inline-block;
+  }
+  .list-entry img {
+    width: 16px;
+    height: 16px;
+    position: relative;
+    top: 3px;
+    margin-top: -3px;
   }
   </style>
 </head>
@@ -41,6 +50,7 @@ Assuming that <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=951624">bug 
 <input id="ab1" type="text" placeholder="Search or enter address">
 <div id="dd1" class="dropdown">
   <div class="list-entry">
+    <img src="google-g-logo.png">
     Search the web<br>
     <span>google.com</span>
   </div>
