remove legacy descriptions

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 <body>
 
 <h1>Spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=959571">bug 959571</a></h1>
-<p>Start typing »google.com« and then press enter<br>
-Assuming that <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=951624">bug 951624</a> is fixed</p>
+<p>
+  Assuming that <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=951624">bug 951624</a> is fixed<br>
+  Start typing »google.com« and then press enter
+</p>
 
-<h2>Type 1</h2>
 <input id="ab1" type="text" placeholder="Search or enter address">
 <div id="dd1" class="dropdown">
   <div class="list-entry">
