fix label of search item

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div id="dd1" class="dropdown">
   <div class="list-entry active" id="entry-search">
     <img src="google-g-logo.png">
-    <strong>Search the web</strong><br>
+        <strong>Google</strong><br>
     <span>google.com</span>
   </div>
   <div class="list-entry active" id="entry-visit" style="display:none">
